update file copy

--- a/clickPlateApp_appv3/www/final.html
+++ b/clickPlateApp_appv3/www/final.html
@@ -254,7 +254,10 @@
                         });
 
                         $('#place_ordered').click(function(){
-                            sessionStorage.clear();
+                            // sessionStorage.clear();
+                            sessionStorage.removeItem('orderCart');
+                            sessionStorage.removeItem('orderModCart');
+                            sessionStorage.removeItem('order_header');
                         })
 
                     });
