--- a/clickPlateApp_appv3/www/menu_items.html
+++ b/clickPlateApp_appv3/www/menu_items.html
@@ -39,8 +39,7 @@
                 <div class="col2-div">
                     <div class="ui-block-b">
                         <!-- <a href="#" data-role="button" data-icon="arrow-r" class="btn_tap" data-ajax="false">TAP TO VIEW <BR> OUR BRANDS</a> -->
-                        <!-- <h4 class="ourbrands">Our Brands</h4> -->
-                        <h4 style="text-align:center;font-weight:bold;color:#d11f24;font-size:25px;margin:5px;">Categories</h4>
+                        <h4 id="category-name" style="text-align:center;font-weight:bold;color:#d11f24;font-size:25px;margin:5px;"></h4>
                         <div class="tile-div" id="category_list">
                         </div>
                         <!-- ############### -->
@@ -51,6 +50,6 @@
 		<script type="text/javascript" src="js/index.js"></script>
         <link rel="stylesheet" href="css/jquery.1.4.3/jquery.mobile.structure-1.4.3.min.css" />
         <script src="css/jquery.mobile-1.4.3.min.js"></script>
-        <script type="text/javascript" src="includes/js/menu2.js"></script>
+        <script type="text/javascript" src="includes/js/menu_items.js"></script>
 	</body>
 </html>
